added endpoint GET /sensorValues
