# service/SensorService.js
@@ -1,5 +1,5 @@
 'use strict';
-
+var mongo = require('mongodb');
 const mongoose = require('mongoose');
 const result = require("js-yaml");
 const MongoClient = require('mongodb').MongoClient;
@@ -82,7 +82,15 @@ exports.getSensorValuesInRange = function (id, dateTime) {
 exports.getSensors = function () {
     return new Promise(async function (resolve, reject) {
         // let docs =  await findOne().catch(console.dir);
-        let docs = await findMany().catch(console.dir);
+        const query = {};
+        const options = {
+            // sort returned documents in ascending order by title (A->Z)
+            sort: {_id: -1},
+            // Include only the `title` and `imdb` fields in each returned document
+            projection: {_id: 1, roomName: 1, sensors: 1},
+        };
+
+        let docs = await findMany(query, options, "roomsAndSensors").catch(console.dir);
         // let docArr = docs.toArray();
         // await docs.forEach(doc => docArr.push(doc));
         var examples = {};
@@ -95,6 +103,45 @@ exports.getSensors = function () {
     });
 }
 
+exports.getSensorValues = function (req) {
+    return new Promise(async function (resolve, reject) {
+        let queryParams = req.query
+        let sensorsInRoom = []
+        let sensorIdCustom
+        let sensorIdString
+        if (queryParams.roomId !== undefined && queryParams.sensorId !== undefined && queryParams.dateTimeFrom !== undefined && queryParams.dateTimeTo !== undefined){
+            sensorsInRoom = await getSensorsInRoom(queryParams.roomId)
+
+            for (let sensorObj of sensorsInRoom){
+                let a = ""
+                sensorIdString = sensorObj._id.toString()
+                if(queryParams.sensorId === sensorIdString){
+                    sensorIdCustom = sensorObj.sensorId
+                }
+            }
+        }
+
+        let query = {
+            dateTime: {
+                $gte: new Date(queryParams.dateTimeFrom),
+                $lte: new Date(queryParams.dateTimeTo)
+            },
+            sensorId: sensorIdCustom
+        }
+
+        // let docs =  await findOne().catch(console.dir);
+        let docs = await findMany(query, {}, "sensorValueEntries").catch(console.dir);
+        // let docArr = docs.toArray();
+        // await docs.forEach(doc => docArr.push(doc));
+        var examples = {};
+        examples['application/json'] = docs;
+        if (Object.keys(examples).length > 0) {
+            resolve(examples[Object.keys(examples)[0]]);
+        } else {
+            resolve();
+        }
+    });
+}
 
 /**
  * Add sensor value to database
@@ -103,6 +150,23 @@ exports.getSensors = function () {
  * body SensorValueInput
  * no response value expected for this operation
  **/
+
+async function getSensorsInRoom(roomId) {
+
+    let collection = "roomsAndSensors"
+    let roomIdMongoObj = new mongo.ObjectID(roomId);
+    const query = {_id: roomIdMongoObj};
+    const options = {
+        // sort returned documents in ascending order by title (A->Z)
+        sort: {_id: -1},
+        // Include only the `title` and `imdb` fields in each returned document
+        projection: {_id: 1, roomName: 1, sensors: 1},
+    }
+
+    let doc = await findOne(collection, query, options)
+    return doc.sensors
+}
+
 exports.sensorsPOST = function (body) {
     console.log(body.dateTime)
 
@@ -112,7 +176,7 @@ exports.sensorsPOST = function (body) {
         dateTime: new Date(body.dateTime)
     })
 
-    MongoClient.connect(url, { useUnifiedTopology: true }, function (err, db) {
+    MongoClient.connect(url, {useUnifiedTopology: true}, function (err, db) {
         if (err) throw err;
         let dbo = db.db("roomsAndSensors");
         dbo.collection("sensorValueEntries").insertOne(newSensorValue,
@@ -150,45 +214,49 @@ exports.sensorsPUT = function (body) {
     });
 }
 
-async function findOne() {
+async function findOne(coll, q, opts) {
     let docs
     try {
         await client.connect();
         const database = client.db("roomsAndSensors");
-        const movies = database.collection("roomsAndSensors");
-        // Query for a movie that has the title 'The Room'
-        const query = {roomName: "POIC_1"};
-        const options = {
-            // sort matched documents in descending order by rating
-            sort: {_id: -1},
-            // Include only the `title` and `imdb` fields in the returned document
-            projection: {_id: 1, roomName: 1, sensors: 1},
-        };
-        docs = await movies.findOne(query, options);
-        // since this method returns the matched document, not a cursor, print it directly
-        console.log(docs);
-    } finally {
-        await client.close();
-    }
-    return docs
-}
+        const movies = database.collection(coll);
 
-async function findMany() {
-    let docs
-    let docsArr = []
-    try {
-        await client.connect();
-        const database = client.db("roomsAndSensors");
-        const movies = database.collection("roomsAndSensors");
-        // query for movies that have a runtime less than 15 minutes
-        const query = {};
+        const query = q;
         const options = {
             // sort returned documents in ascending order by title (A->Z)
             sort: {_id: -1},
             // Include only the `title` and `imdb` fields in each returned document
             projection: {_id: 1, roomName: 1, sensors: 1},
         };
-        docs = await movies.find(query, options);
+
+
+        // Query for a movie that has the title 'The Room'
+        docs = await movies.findOne(query, options);
+        // since this method returns the matched document, not a cursor, print it directly
+        console.log(docs);
+        // await client.close();
+    } finally {
+
+    }
+    return docs
+}
+
+async function findMany(query, options, collName) {
+    let docs
+    let docsArr = []
+    try {
+        await client.connect();
+        const database = client.db("roomsAndSensors");
+        const collection = database.collection(collName);
+        // query for collection that have a runtime less than 15 minutes
+        // const query = {};
+        // const options = {
+        //     // sort returned documents in ascending order by title (A->Z)
+        //     sort: {_id: -1},
+        //     // Include only the `title` and `imdb` fields in each returned document
+        //     projection: {_id: 1, roomName: 1, sensors: 1},
+        // };
+        docs = await collection.find(query, options);
         docsArr = await docs.toArray()
         // print a message if no documents were found
         if ((await docs.count()) === 0) {
@@ -198,7 +266,7 @@ async function findMany() {
         // await docs.forEach(console.dir);
     } finally {
         // console.log("Docs count: " + await docs.count());
-        await client.close();
+        // await client.close();
     }
 
     return docsArr
